--- a/sass/common/_variables.scss
+++ b/sass/common/_variables.scss
@@ -1,5 +1,5 @@
 html {
-  font-size: clamp(15px, 2vw, 18px);
+  // font-size: clamp(15px, 2vw, 18px);
   font-size: 62.5%; /* 10px = 1rem */
 }
 
@@ -17,7 +17,7 @@ $weight-base: 300;
 $letter-spacing-base: 0.06em;
 
 $background-base: #FFFFFF;
-$width-inner: 1280px;
+$width-inner: 128rem;
 
 $breakpoints: (
   sp: "screen and (max-width: 767px)",
