--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
   line-height: 2;
   color: #333;
   font-family: "Noto Sans JP", sans-serif;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   letter-spacing: 0.06em;
 }
 @media screen and (min-width: 768px) {
@@ -40,14 +40,14 @@ button {
 
 .header {
   height: 65px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   position: sticky;
   top: 0;
   z-index: 150;
 }
 @media screen and (min-width: 768px) {
   .header {
-    height: 90px;
+    height: 150px;
     background-color: rgba(255, 255, 255, 0);
   }
 }
@@ -70,7 +70,7 @@ button {
     left: 5rem;
   }
 }
-@media screen and (min-width: 2100px) {
+@media screen and (min-width: 1440px) {
   .header__company-info {
     left: 8rem;
   }
@@ -111,7 +111,7 @@ button {
 @media screen and (min-width: 768px) {
   .header__hum-btn {
     width: 7rem;
-    top: 5.3rem;
+    top: 6rem;
     right: 5.5rem;
     gap: 1.5rem;
   }
@@ -147,7 +147,7 @@ button {
     background-color: #515151;
   }
 }
-@media screen and (min-width: 2100px) {
+@media screen and (min-width: 1440px) {
   .header__hum-btn {
     right: 9rem;
   }
@@ -219,7 +219,7 @@ button {
     gap: 30px;
   }
 }
-@media screen and (min-width: 2100px) {
+@media screen and (min-width: 1440px) {
   .nav__container {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -251,7 +251,7 @@ button {
     font-weight: 250;
   }
 }
-@media screen and (min-width: 2100px) {
+@media screen and (min-width: 1440px) {
   .nav__left {
     width: auto;
     font-size: 20px;
@@ -279,7 +279,7 @@ button {
     margin-bottom: 0;
   }
 }
-@media screen and (min-width: 2100px) {
+@media screen and (min-width: 1440px) {
   .nav__list-wrap {
     width: auto;
   }
@@ -487,12 +487,6 @@ button {
   border-left: solid 5px rgb(119, 119, 118);
 }
 
-@media screen and (min-width: 768px) {
-  .all-section__wrapper {
-    min-width: 1200px;
-  }
-}
-
 .top {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -500,23 +494,66 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 2rem;
 }
-
-.top__txt-img {
-  margin: 0 auto;
+@media screen and (min-width: 768px) {
+  .top {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
-.top__txt-img img {
+@media screen and (min-width: 1440px) {
+  .top {
+    max-width: 1800px;
+    margin: 0 auto;
+    gap: 4rem;
+  }
+}
+.top .top__txt-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+@media screen and (min-width: 768px) {
+  .top .top__txt-img {
+    margin: 0;
+  }
+}
+.top .top__txt-img img {
   width: 14px;
   height: 224px;
 }
-
-.top__img img {
+@media screen and (min-width: 768px) {
+  .top .top__txt-img img {
+    width: 21px;
+    height: 336px;
+  }
+}
+.top .top__img {
+  -webkit-box-flex: 8;
+      -ms-flex: 8;
+          flex: 8;
+}
+.top .top__img img {
   height: 420px;
   width: 316px;
   -o-object-fit: cover;
      object-fit: cover;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
+}
+@media screen and (min-width: 768px) {
+  .top .top__img img {
+    height: auto;
+    width: auto;
+  }
 }
 
 .about {
