--- a/sass/common/_variables.scss
+++ b/sass/common/_variables.scss
@@ -1,10 +1,9 @@
-@use 'sass:map';
+@use "sass:map";
 
 html {
   // font-size: clamp(15px, 2vw, 18px);
   font-size: 62.5%; /* 10px = 1rem */
 }
-
 
 $font-family-ja: "Noto Sans JP", sans-serif;
 $font-family-en: "Montserrat", sans-serif;
@@ -18,22 +17,20 @@ $color-base: #333;
 $weight-base: 300;
 $letter-spacing-base: 0.06em;
 
-$background-base: #FFFFFF;
+$background-base: #ffffff;
 $width-inner: 128rem;
-
-
-
 
 //マップ型変数breakpointsを定義
 $breakpoints: (
   //767px以下（スマホ）用の表示
   sp: "screen and (max-width: 767px)",
+  // 768px〜1023px（タブレット）用の表示
+  tb: "screen and (min-width: 768px) and (max-width: 1023px)",
   //768px以上（PC）用の表示
   pc: "screen and (min-width: 768px)",
   //1400px以上（PC大きめ）用の表示
-  pc-max: "screen and (min-width: 2100px)"
-)!default; // 今の所defaultは必要ないが、念の為
-
+  pc-max: "screen and (min-width: 1440px)"
+) !default; // 今の所defaultは必要ないが、念の為
 
 //メディアクエリ用のmixinを定義。デフォルト値はpc
 @mixin mq($breakpoint: pc) {
