style: トップページpic-fのコードを簡素化

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -366,6 +366,10 @@
   margin-bottom: 1.5rem;
 }
 
+.works__pic {
+  margin-bottom: 1.6rem;
+}
+
 .works__more {
   // margin-left: auto;
   // margin-bottom: 40px;
