--- a/css/main.css
+++ b/css/main.css
@@ -415,6 +415,14 @@ button {
 .img01 {
   margin-bottom: 10px;
 }
+.pic-f {
+  width: 80%;
+  border: 5px solid #fff;
+  -webkit-box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
+  max-width: 500px;
+}
+
 .footer {
   padding-top: 24px;
   padding-bottom: 16px;
@@ -866,6 +874,10 @@ button {
 .works__txt {
   text-align: justify;
   margin-bottom: 1.5rem;
+}
+
+.works__pic {
+  margin-bottom: 1.6rem;
 }
 
 @media screen and (min-width: 768px) {
