--- a/sass/common/_global.scss
+++ b/sass/common/_global.scss
@@ -416,6 +416,23 @@ button {
   }
 }
 
+// あたらしい写真フレーム
+.pic-f {
+  width: 80%;
+  // margin: 0 auto;
+  border: 5px solid #fff;
+  box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
+  max-width: 500px;
+}
+
+.pic-f__img {
+  // width: 240px;
+  // height: 160px;
+  // flex-shrink: 0;
+}
+
+
+
 // *************************** footer ***************************
 .footer {
   padding-top: 24px;
