--- a/sass/common/_global.scss
+++ b/sass/common/_global.scss
@@ -90,7 +90,6 @@ button {
     @include mq() {
       width: 8rem;
     }
-
   }
 
   .header__company-name {
@@ -101,7 +100,6 @@ button {
       padding: 1rem 0;
     }
   }
-
 }
 
 .header__hum-btn {
@@ -337,7 +335,6 @@ button {
   @include mq() {
     font-size: 2rem;
   }
-
 }
 
 .section-title {
@@ -409,29 +406,30 @@ button {
   }
 }
 
-.img01 {
-  margin-bottom: 10px;
-  @include mq() {
-    // margin-bottom: 15px;
-  }
-}
-
 // あたらしい写真フレーム
 .pic-f {
   width: 80%;
-  // margin: 0 auto;
+  margin: 0 auto;
   border: 5px solid #fff;
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
   max-width: 500px;
+  margin-bottom: 32px;
+
+  @include mq() {
+    border: 8px solid #fff;
+  }
+
+  .pic-f__img {
+
+  }
+
+  .img01 {
+    margin-bottom: 5px;
+    @include mq() {
+      margin-bottom: 8px;
+    }
+  }
 }
-
-.pic-f__img {
-  // width: 240px;
-  // height: 160px;
-  // flex-shrink: 0;
-}
-
-
 
 // *************************** footer ***************************
 .footer {
