--- a/sass/common/_variables.scss
+++ b/sass/common/_variables.scss
@@ -21,7 +21,7 @@ $background-base: #ffffff;
 $width-inner: 128rem;
 
 $padding_sp: 0 3rem;
-$padding_pc: 0;
+$padding_pc: 0 6rem;
 
 // あとで数値決める
 $max-width_sp: 0rem;
