--- a/sass/common/_global.scss
+++ b/sass/common/_global.scss
@@ -409,7 +409,7 @@ button {
 // あたらしい写真フレーム
 .pic-f {
   width: 80%;
-  // margin: 0 auto;
+  margin: 0 auto;
   border: 5px solid #fff;
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
   min-width: 254px;
@@ -420,9 +420,9 @@ button {
     border: 8px solid #fff;
   }
 
-  .pic-f__img {
+  // .pic-f__img {
 
-  }
+  // }
 
   .img01 {
     margin-bottom: 5px;
